@@ -74,6 +74,7 @@ src/gui/dialogs/mp_create_game.cpp
 src/gui/dialogs/mp_method_selection.cpp
 src/gui/dialogs/title_screen.cpp
 src/gui/dialogs/transient_message.cpp
+src/gui/dialogs/unit_attack.cpp
 src/gui/dialogs/unit_create.cpp
 src/gui/dialogs/wml_message.cpp
 src/gui/widgets/button.cpp
